# llm-wikidata-gapfilling-shrines

./: CLAUDE.md  FINDINGS.md  MODEL_COMPARISON.md  README.md  devlog.md  pyproject.toml  queue.md  requirements.txt  todo.md
.github/workflows/: ci.yml
data_lake/: eval_set.json  shrines_raw.json  shrines_stratified.json
docs/: index.html
literature/: REVIEW.md  sources.md
scripts/: run.py
src/o1/: __init__.py  dataset.py  figures.py  predict.py  score.py  verify.py  wikidata.py
tests/: test_dataset.py  test_figures.py  test_predict.py  test_score.py  test_smoke.py  test_verify.py  test_wikidata.py
